--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <a href="https://mobile.twitter.com/haris5406" class="twitter"><i class="icofont-twitter"></i></a>
         <a href="https://m.facebook.com/harees.harees2" class="Facebook"><i class="icofont-facebook"></i></a>
         <a href="https://www.instagram.com/ha6iz.1" class=instagram "><i class="icofont-instagram"></i></a>
+        <a href="https://www.whatsapp.com/wa.me/+919995654069"><i class="icofont-whatsapp"></i></a>                                                                                         
         </div>
 
     </div>
@@ -317,7 +318,7 @@
           <div class="resume-item">
             <h4>Diploma  &amp; mechanical engineering</h4>
             <h5>2015 - 2018 </h5>
-            <p><em> JCT College of Engineering and Technology in Pichanur in Coimbatore</p>
+            <p><em> JCT College of Engineering and Technology in Coimbatore</p>
             
           </div>
           <div class="resume-item">
@@ -371,6 +372,7 @@
         <a href="https://mobile.twitter.com/haris5406" class="twitter"><i class="icofont-twitter"></i></a>
         <a href="https://m.facebook.com/harees.harees2" class="Facebook"><i class="icofont-facebook"></i></a>
         <a href="https://www.instagram.com/ha6iz.1" class=instagram "><i class="icofont-instagram"></i></a>
+         <a href="https://www.whatsapp.com/wa.me/+919995654069"><i class="icofont-whatsapp"></i></a> 
         </div>
           </div>
         </div>
