--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     <div class="testimonials container">
 
       <div class="section-title">
-        <h2>Testimonials</h2>
+        <h2>MENTORS</h2>
       </div>
 
       <div class="owl-carousel testimonials-carousel">
