--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
         <a href="https://mobile.twitter.com/haris5406" class="twitter"><i class="icofont-twitter"></i></a>
         <a href="https://m.facebook.com/harees.harees2" class="Facebook"><i class="icofont-facebook"></i></a>
         <a href="https://www.instagram.com/ha6iz.1" class=instagram "><i class="icofont-instagram"></i></a>
-        <a href="https://www.whatsapp.com/wa.me/+919995654069"><i class="icofont-whatsapp"></i></a>                                                                                         
-        </div>
+       </div>
 
     </div>
   </header><!-- End Header -->
@@ -94,7 +93,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 5 Apr 1997</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> <www class="harissalim xyz"></www></li>
+                <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> <www class="harissalim.xyz"></www></li>
                 <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +919995654069</li>
                 <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : palakkad, kerala</li>
               </ul>
@@ -334,7 +333,7 @@
               <h4>programming language  </h4>
                <p><em> c, c++, java, PHP, ASP, NET</p>  
                 <h4>Knowledge  </h4>
-                <p><em> JSP, Javascript, CSS, HTML,WORDPRESS/CMS, Git bash, Photoshop, & Visual basic </p>
+                <p><em> JSP, Javascript, CSS, HTML,WORDPRESS/CMS, Git, Photoshop, & Visual basic </p>
                   <h4>Database  Knowledeg </h4>
                   <p><em> MS Access 2000, mysql</p>
               
