--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
               </ul>
             </div>
           </div>
-          <p>
-            Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-            Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-          </p>
+          <p> I'm a self-taught data engineer who is wandering in an ocean of vast field of data science
+
+I love learning, Every day I push myself to learn something new, whether that be about machine learning, software engineering, or miscellaneous facts about the universe..I completed Mechanical engineering from anna university 2018, and done few courses on python ,data science,machine learning. Data science is an vast inter-disciplinary field that uses scientific methods and algorithm to derive better decision and that is one thing keeps me driving to data science.
+            </p>
         </div>
       </div>
 
