--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 
       <div class="social-links">
         <a href="https://mobile.twitter.com/haris5406" class="twitter"><i class="icofont-twitter"></i></a>
-        <a href="https://m.facebook.com/harees.harees2" class="Facebook"><i class="icofont-facebook"></i></a>
+        <a href="https://m.facebook.com/harees.harees2" class="Facebook"><i class="icofont-facebook"></i></a>  
+        <a href="https://www.linkedin.com/in/haris-salim-0718831b1" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://www.instagram.com/ha6iz.1" class=instagram "><i class="icofont-instagram"></i></a>
        </div>
 
@@ -371,6 +372,7 @@ I love learning, Every day I push myself to learn something new, whether that be
         <a href="https://mobile.twitter.com/haris5406" class="twitter"><i class="icofont-twitter"></i></a>
         <a href="https://m.facebook.com/harees.harees2" class="Facebook"><i class="icofont-facebook"></i></a>
         <a href="https://www.instagram.com/ha6iz.1" class=instagram "><i class="icofont-instagram"></i></a>
+         <a href="https://www.linkedin.com/in/haris-salim-0718831b1" class="linkedin"><i class="bx bxl-linkedin"></i></a>
          <a href="https://www.whatsapp.com/wa.me/+919995654069"><i class="icofont-whatsapp"></i></a> 
         </div>
           </div>
