--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 5 Apr 1997</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> <www class="harissalim.xyz"></www></li>
+                <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www class=harissalim.xyz </www></li>
                 <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +919995654069</li>
                 <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : palakkad, kerala</li>
               </ul>
@@ -200,7 +200,7 @@ I love learning, Every day I push myself to learn something new, whether that be
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-            <h3>digitl msrketin</h3>
+            <h3>digital marketing</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
