--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 5 Apr 1997</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www class=harissalim.xyz </www></li>
+                <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.harissalim.xyz </www></li>
                 <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +919995654069</li>
                 <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : palakkad, kerala</li>
               </ul>
