--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ I love learning, Every day I push myself to learn something new, whether that be
         </div>
       </div>
 
-      <form action="forms/contact.php" method="post" role="form" class="php-email-form mt-4">
+      <form action="https://script.google.com/macros/s/AKfycbyNBOaNc7FA9wygAGTZzAORjTATN4mdZ3bdKdrh3w/exec" method="post" role="form" class="php-email-form mt-4">
         <div class="form-row">
           <div class="col-md-6 form-group">
             <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
